<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.4.RELEASE</version>
		<relativePath/>
	</parent>
	<groupId>com.example</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <!--   <xmlFileName>test.xml</xmlFileName>
    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;
    <xml.file>${env.xmlFileName}</xml.file>
    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;
    <testType>${env.testType}</testType>-->
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.14.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <!--<scope>test</scope>-->
    </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
       <version>3.6.0</version>
        <configuration>
          <testFailureIgnore>true</testFailureIgnore>
          <!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
          <argLine>-Dfile.encoding=UTF-8</argLine>
          <!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
          <argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
         <!-- <systemPropertyVariables>
            <propertyName>${testType}}</propertyName>
          </systemPropertyVariables>-->
          <suiteXmlFiles>
            <!--该文件位于工程根目录时，直接填写名字，其它位置要加上路径。-->
            <suiteXmlFile>test.xml</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
			</plugin>
		</plugins>
	</build>

</project>
